# src/controllers/reviewController.ts
@@ -1,5 +1,5 @@
 import e, { Request, Response } from "express";
-import { Ratings, ReviewUpsert } from "../models/reviewModel";
+import { Ratings, Review, ReviewUpsert } from "../models/reviewModel";
 import { isValidFirebaseUID, isValidObjectId } from "../utils/validate";
 import { validate } from "class-validator";
 import { ReviewService } from "../services/reviewService";
@@ -18,7 +18,19 @@ export class ReviewController {
       return res.status(500).json({ msg: getReviewsError });
     }
 
-    return res.status(200).json(reviews);
+    const emailCountMap: { [key: string]: number } = reviews
+      ? reviews.reduce((acc: { [key: string]: number }, review) => {
+          acc[review.email] = (acc[review.email] || 0) + 1;
+          return acc;
+        }, {})
+      : {};
+
+    const updatedReviews = reviews ? reviews.map((review) => ({
+      ...review,
+      user_review_count: emailCountMap[review.email],
+    })) : [];
+
+    return res.status(200).json(updatedReviews);
   }
 
   static async getReviewById(req: Request, res: Response): Promise<Response> {
@@ -27,15 +39,32 @@ export class ReviewController {
       return res.status(400).json({ msg: "Invalid review ID" });
     }
 
-    const { review, error: getReviewError } = await ReviewService.getReviewById(
-      reviewId
-    );
+    const { review: reviewRaw, error: getReviewError } =
+      await ReviewService.getReviewById(reviewId);
     if (getReviewError) {
       return res.status(500).json({ msg: getReviewError });
     }
-    if (!review) {
+    if (!reviewRaw) {
       return res.status(404).json({ msg: "No data found" });
     }
+
+    const { reviews, error: getReviewsError } =
+      await ReviewService.getReviews();
+    if (getReviewsError) {
+      return res.status(500).json({ msg: getReviewsError });
+    }
+
+    const emailCountMap: { [key: string]: number } = reviews
+      ? reviews.reduce((acc: { [key: string]: number }, review) => {
+          acc[review.email] = (acc[review.email] || 0) + 1;
+          return acc;
+        }, {})
+      : {};
+
+    const review = new Review({
+      ...reviewRaw,
+      user_review_count: emailCountMap[reviewRaw.email],
+    });
 
     return res.status(200).json(review);
   }
@@ -69,7 +98,25 @@ export class ReviewController {
       return res.status(404).json({ msg: "No data found" });
     }
 
-    return res.status(200).json(reviews);
+    const { reviews: allReviews, error: getReviewsError } =
+      await ReviewService.getReviews();
+    if (getReviewsError) {
+      return res.status(500).json({ msg: getReviewsError });
+    }
+
+    const emailCountMap: { [key: string]: number } = allReviews
+      ? allReviews.reduce((acc: { [key: string]: number }, review) => {
+          acc[review.email] = (acc[review.email] || 0) + 1;
+          return acc;
+        }, {})
+      : {};
+
+    const updatedReviews = reviews.map((review) => ({
+      ...review,
+      user_review_count: emailCountMap[review.email],
+    }));
+
+    return res.status(200).json(updatedReviews);
   }
 
   static async createReview(req: Request, res: Response): Promise<Response> {
@@ -328,10 +375,14 @@ export class ReviewController {
     reviews.forEach((review) => {
       totalRatings.services += Number((review.ratings as JsonObject)?.services);
       totalRatings.location += Number((review.ratings as JsonObject)?.location);
-      totalRatings.amenities += Number((review.ratings as JsonObject)?.amenities);
+      totalRatings.amenities += Number(
+        (review.ratings as JsonObject)?.amenities
+      );
       totalRatings.prices += Number((review.ratings as JsonObject)?.prices);
       totalRatings.food += Number((review.ratings as JsonObject)?.food);
-      totalRatings.room_comfort_and_quality += Number((review.ratings as JsonObject)?.room_comfort_and_quality);
+      totalRatings.room_comfort_and_quality += Number(
+        (review.ratings as JsonObject)?.room_comfort_and_quality
+      );
     });
 
     const numberOfReviews = reviews.length;
@@ -347,13 +398,14 @@ export class ReviewController {
             room_comfort_and_quality: 0,
           })
         : new Ratings({
-          services: totalRatings.services / numberOfReviews,
-          location: totalRatings.location / numberOfReviews,
-          amenities: totalRatings.amenities / numberOfReviews,
-          prices: totalRatings.prices / numberOfReviews,
-          food: totalRatings.food / numberOfReviews,
-          room_comfort_and_quality: totalRatings.room_comfort_and_quality / numberOfReviews,
-        });
+            services: totalRatings.services / numberOfReviews,
+            location: totalRatings.location / numberOfReviews,
+            amenities: totalRatings.amenities / numberOfReviews,
+            prices: totalRatings.prices / numberOfReviews,
+            food: totalRatings.food / numberOfReviews,
+            room_comfort_and_quality:
+              totalRatings.room_comfort_and_quality / numberOfReviews,
+          });
 
     const newExperience = new ExperienceUpsertExtended({
       ...experience,
@@ -375,16 +427,6 @@ export class ReviewController {
       }),
       review_count: experience.review_count - 1,
     });
-
-
-
-
-
-
-
-
-
-
 
     return res.status(200).json({ msg: "Successfully deleted" });
   }
